# shell

./: CMakeLists.txt  CMakePresets.json
src/: main  main.cpp  trie.h
src/main.dSYM/Contents/Resources/DWARF/: main
src/main.dSYM/Contents/Resources/Relocations/aarch64/: main.yml
